grammar.txt
file          -> stmt* EOF

stmt          -> exprStmt
               | printStmt
               | varStmt

exprStmt      -> expr "\n"
printStmt     -> "print" "(" expr ")" "\n"
varStmt       -> IDENTIFIER "=" expr "\n"

expr          -> equality
equality      -> comparison (("==" | "!=") comparison)*
comparison    -> term ((">" | ">=" | "<" | "<=") term)*
term          -> factor (("+" | "-") factor)*
factor        -> unary (("*" | "/") unary)*
unary         -> ("-" | "not") unary
               | primary
primary       -> NUMBER | STRING
               | "True" | "False" | "None"
               | "(" expr ")"
               | IDENTIFIER
